kubernetes/apps/istio-system/istio-gateway/app/authz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-ingress-istio
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - httpbin.selad.net
              - httpbin.selad.net:443
              - httpbin.selad.net:80
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-ingress-custom
  namespace: appsplatform
spec:
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - httpbin.selad.net
              - httpbin.selad.net:*
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bookinfo-gateway-istio
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - bookinfo.selad.net
              - bookinfo.selad.net:443
              - bookinfo.selad.net:80
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: bookinfo-gateway-custom
  namespace: appsplatform
spec:
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - bookinfo.selad.net
              - bookinfo.selad.net:*
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authentik-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - "app.selad.net"
